// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    Expenses
     totalling 
    $204,514.23
  </h1>
</div>
`;

exports[`Should correctly render expensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    Expense
     totalling 
    $13.00
  </h1>
</div>
`;
